--- a/.github/workflows/stratagems.yml
+++ b/.github/workflows/stratagems.yml
@@ -1,8 +1,7 @@
-# 将静态内容部署到 GitHub Pages 的简易工作流程
 name: StratagemHero
 
 on:
-  # 仅在推送到默认分支时运行。
+  # 仅在推送或PR到默认分支时运行。
   push:
     branches: [ 'master' ]
   pull_request:
@@ -26,13 +25,13 @@ jobs:
   # 单次部署的工作描述
   deploy:
     environment:
-      name: NodeJS
+      name: CI/CD
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout branch
         uses: actions/checkout@v4
-      - name: Install pnpm
+      - name: Set up pnpm
         uses: pnpm/action-setup@v2
         with: 
           version: 8.15.4
