--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helldivers",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "disable-devtool": "^0.3.8",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5",
     "vue-router": "4"
   },
   "devDependencies": {
