--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helldivers",
   "private": true,
-  "version": "1.5.0",
+  "version": "1.5.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/howler": "^2.2.12",
     "disable-devtool": "^0.3.8",
+    "howler": "^2.2.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.5.13",
